🐛 Fixed: Still clickable even it is not visible.

--- a/components/ThemePicker/_theme-picker.scss
+++ b/components/ThemePicker/_theme-picker.scss
@@ -20,6 +20,7 @@
 
   &.hide {
     opacity: 0;
+    pointer-events: none;
   }
 
   & > div {
